test/runtime/CompressedOops/CompressedClassPointers.java fails with product build since -XX:+PrintMiscellaneous is a debug only flag

XMLWordPrintable

    • b06

      The test test/runtime/CompressedOops/CompressedClassPointers.java fails on product builds since the -XX:+PrintMiscellaneous is a debug only flag:

      Command line: [/export/local/aurora/CommonData/jdk/bin/java -XX:HeapBaseMinAddress=1m -XX:+PrintMiscellaneous -XX:+Verbose -version ]
      ----------System.err:(24/1288)----------
       stdout: [];
       stderr: [Error: VM option 'PrintMiscellaneous' is develop and is available only in debug version of VM.
      Error: Could not create the Java Virtual Machine.
      Error: A fatal exception has occurred. Program will exit.
      ]
       exitValue = 1


            Assignee:
            Coleen Phillimore
            Reporter:
            Christian Tornqvist
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: