8036547: test/runtime/CompressedOops/CompressedClassPointers.java fails with product build since -XX:+PrintMiscellaneous is a debug only flag

Use PrintCompressedOopsMode and these other flags that match printing compressed oop information

Reviewed-by: ctornqvi, sla